codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_halfwidth_kana_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

  >_ OpenAI Codex (v0.162.0-alpha.18)

  Visit https://chatgpt.com/settings/usage
  for up-to-date
  information on rate limits and credits

  Model:               ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞ
                       ﾊﾟ-model (reasoning
                       none, summaries
                       auto)
  Directory:           [[workspace]]
  Permissions:         Custom (workspace
                       with network
                       access, Ask for
                       approval)
  Agents.md:           <none>
  Account:             ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ
                       @example.com (ｶﾞﾊﾟ
                       plan)
  Thread name:         ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ
                       thread
  Collaboration mode:  ｶﾞﾊﾟ collaboration
                       mode

  Limits:              data not available
                       yet
